--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ visualizer/IdealGraphVisualizer/*/target/
 *.interp
 *.tokens
 /vm/tests/gh_workflows/CDTInspectorTest/target/
+!classfiles/modified/bcGen/*.class
+!classfiles/scala/bcGen/*.class
