Adding source file for generic method test case

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ visualizer/IdealGraphVisualizer/*/target/
 /vm/tests/gh_workflows/CDTInspectorTest/target/
 !classfiles/modified/bcGen/*.class
 !classfiles/scala/bcGen/*.class
+.vscode/
+.metals/
