fixing test cases

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,9 @@ visualizer/IdealGraphVisualizer/*/target/
 *.tokens
 /vm/tests/gh_workflows/CDTInspectorTest/target/
 !tests/classfiles/hint/bcGen/*.class
+!tests/classfiles/hint/bcGen/Classes/*.class
 !tests/classfiles/plain/bcGen/*.class
+!tests/classfiles/plain/bcGen/Classes/*.class
 .vscode/
 .metals/
 .scala-build/
