Added scala test cases for methods & arrays

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@ visualizer/IdealGraphVisualizer/*/target/
 !tests/classfiles/plain/bcGen/Classes/*.class
 !tests/classfiles/hint/bcGen/Methods/*.class
 !tests/classfiles/plain/bcGen/Methods/*.class
+!tests/classfiles/hint/bcGen/Arrays/*.class
+!tests/classfiles/plain/bcGen/Arrays/*.class
 .vscode/
 .metals/
 .scala-build/
